@@ -25,11 +25,11 @@ $xoopsUrl = parse_url(XOOPS_URL);
 $modversion = [
     'name' => _MI_TDMDOWNLOADS_NAME,
     'version' => '2.0',
-    'module_status' => 'RC 1',
-    'release_date' => '2019/01/31',
+    'module_status' => 'Beta 1',
+    'release_date' => '2019/01/12',
     'description' => _MI_TDMDOWNLOADS_DESC,
-    'credits' => 'Mage, Mamba, Goffy',
-    'author' => 'Mage',
+    'credits' => 'G. Mage, Mamba, Goffy',
+    'author' => 'G. Mage',
     'nickname' => 'Mage',
     'module_website_url' => 'www.xoops.org',
     'module_website_name' => 'Support site',
